--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-s<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@ s<!DOCTYPE html>
 </head>
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Viajes Chile</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,20 +26,17 @@ s<!DOCTYPE html>
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Quienes Somos</a>
+                <a class="nav-link active" href="#">Quienes Somos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Destacados</a>
+                <a class="nav-link active" href="#">Destacados</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link active" href="#">Contacto</a>
               </li>
                      
             </ul>
-            <span class="navbar-text">
-              Navbar text with an inline element
-            </span>
-          </div>
+             </div>
         </div>
       </nav>
       <!--Hero section-->
@@ -73,7 +70,7 @@ s<!DOCTYPE html>
         <!--columnas de los componentes-->
         <div class="col-12 col-md-4 col-xl-3">
          <!--Card-->   
-            <div class="card" style="width: 18rem;">
+            <div class="card h-100" style="width: 18rem;">
                 <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -83,7 +80,7 @@ s<!DOCTYPE html>
         <!--columnas de los componentes-->
         <div class="col-12 col-md-4 col-xl-3">
             <!--Card-->   
-               <div class="card" style="width: 18rem;">
+               <div class="card h-100" style="width: 18rem;">
                    <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
                    <div class="card-body">
                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -93,7 +90,7 @@ s<!DOCTYPE html>
            <!--columnas de los componentes-->
         <div class="col-12 col-md-4 col-xl-3">
             <!--Card-->   
-               <div class="card" style="width: 18rem;">
+               <div class="card h-100" style="width: 18rem;">
                    <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
                    <div class="card-body">
                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -103,7 +100,7 @@ s<!DOCTYPE html>
            <!--columnas de los componentes-->
         <div class="col-12 col-md-4 col-xl-3">
             <!--Card-->   
-               <div class="card" style="width: 18rem;">
+               <div class="card h-100" style="width: 18rem;">
                    <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
                    <div class="card-body">
                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
