--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/0e44dc81b4.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Viajes Chile</a>
+          <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            Viajes Chile</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -61,47 +63,56 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      
-      <!--Destacados-->
-      <section id="destacados" class="container">
-        <h2>DESTACADOS</h2>
+      <!--Quienes somos-->
+      <div class="container-fluid">
+        ...
+      </div>
 
-        <div class="row">
+
+
+
+
+
+      <!--Destacados-->
+      <section id="destacados" class="container pt-4">
+        <h2 class="text-center raleway-medium" >DESTACADOS</h2>
+
+        <div class="row justify-content-center">
         <!--columnas de los componentes-->
-        <div class="col-12 col-md-4 col-xl-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
          <!--Card-->   
-            <div class="card h-100" style="width: 18rem;">
-                <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+            <div class="card may-2">
+                <img src="assets/img/card1.jpg " class="card-img-top" alt="...">
                 <div class="card-body">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
         </div>
         <!--columnas de los componentes-->
-        <div class="col-12 col-md-4 col-xl-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
             <!--Card-->   
-               <div class="card h-100" style="width: 18rem;">
-                   <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+               <div class="card may-2" >
+                   <img src="assets/img/card2.jpg " class="card-img-top" alt="...">
                    <div class="card-body">
                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    </div>
                  </div>
            </div>
            <!--columnas de los componentes-->
-        <div class="col-12 col-md-4 col-xl-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
             <!--Card-->   
-               <div class="card h-100" style="width: 18rem;">
-                   <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+               <div class="card  may-2" >
+                   <img src="assets/img/card3.jpg " class="card-img-top" alt="...">
                    <div class="card-body">
                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    </div>
                  </div>
            </div>
            <!--columnas de los componentes-->
-        <div class="col-12 col-md-4 col-xl-3">
+        <div class="col-12 col-md-6 col-lg-4 col-xl-3">
             <!--Card-->   
-               <div class="card h-100" style="width: 18rem;">
-                   <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+               <div class="card may-2" >
+                   <img src="assets/img/card4.jpg " class="card-img-top" alt="...">
                    <div class="card-body">
                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                    </div>
