--- a/index.html
+++ b/index.html
@@ -153,6 +153,20 @@
           </div>
         </div>
       </section>
+      <footer class="container-fluid bg-body-tertiary text-white py-3" data-bs-theme="">
+        <div class="row">
+          <div class="col">
+            <p class="text-left">
+              Viajes Chile
+            </p>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-facebook-f"></i>">
+            <i class="fa-brands fa-x-twitter"></i>
+            </div>
+        </div>
+      </footer>
+
     
       
 
