--- a/index.html
+++ b/index.html
@@ -185,4 +185,4 @@
     <script src="assets/js/scripts.js"> </script> 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>    
   </body>
-</html>
+</html>*/**
